# data-findcycle

./: .gitignore  CHANGELOG.md  data-findcycle.cabal  fourmolu.yaml  list-findcycle.cabal
.github/workflows/: bench.yml  doctest.yml  format.yml  haddock-pages.yml  lint.yml  test-lts.yml  test.yml
bench/: Main.hs
internal/Data/FindCycle/: TestCycle.hs
src/Data/: FindCycle.hs
test/: Main.hs
