cabal-version:      1.18
name:               data-findcycle
version:            0.1.0.0
synopsis:           Find cycles in periodic functions (and lists)
homepage:           https://github.com/rafl/data-findcycle
license:            MIT
license-file:       LICENSE
author:             Florian Ragwitz
maintainer:         florian.ragwitz@gmail.com
copyright:          (c) 2025 Florian Ragwitz
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  Data.FindCycle
    build-depends:
        base,
        containers,
        hashable,
        unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

test-suite data-findcycle-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        data-findcycle,
        QuickCheck,
        primes,
        tasty,
        tasty-quickcheck
    ghc-options: -Wall -threaded -rtsopts
